# libdisplay

./: CMakeLists.txt  README.md
common/: protocol.h
daemon/: daemon.c
libdisplay_consumer/: display_consumer.c  display_consumer.h
libdisplay_producer/: display_producer.c  display_producer.h
tests/: bench_consumer.c  bench_input_consumer.c  bench_input_producer.c  bench_producer.c  run_bench.sh  run_bench_input.sh  test.sh  test_consumer.c  test_producer.c  test_triple_consumer.c  test_triple_producer.c
